added first section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Tessellate by HTML5 UP</title>
+		<title>Christopher Lew</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,11 +19,12 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Christopher Lew</h1>
+					<p>A fullstack software engineer</p>
+					<p>Experienced in Redux, React, Javascript, Ruby on Rails, SQL and HTML5/CSS3<p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Learn More</a>
 				</footer>
 			</section>
 
@@ -31,9 +32,26 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<div class='first-flex'>
+							<div class='left-first'>
+								<h2>About</h2>
+								<p>I am a software developer with experiance in Redux, React, JavaScript and
+									the Ruby on Rails framework. I enjoy being fully immersed in a problem, bringing the problem solving experience I gained as a mechanical engineer to the software field.<br />
+
+								As an engineer, I am passionate about understanding the inner workings of complex systems be it a rocket engine or a web application.</p>
+							</div>
+							<div class=right-first>
+								<div class='headshot'></div>
+								<div class='links'>
+					        <a class='img-links' href='https://www.linkedin.com/in/cjlew'>
+					          <img src='./images/linkedin-34-logo.png' alt='linkedin-profile'/>
+					        </a>
+					        <a class='img-links' href='https://www.github.com/cjlew'>
+					          <img src='./images/GitHub-Mark-32px.png' alt='github-repo'>
+					        </a>
+					      </div>
+							</div>
+						</div>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -43,36 +61,30 @@
 								<section>
 									<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
 									<header>
-										<h3>Gravida</h3>
+										<h3>Tempo</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Tempo is a live streaming music app inspired by Spotify. Users can enjoy their favorite songs while exploring the many playlists created by their friends. Tempo was created using Rails 5, React, Redux, PostgreSQL and Amazon Web Services S3.</p>
+									<a href="https://github.com/cjlew/Tempo" class="button scrolly">Repo</a>
 								</section>
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
 									<span class="feature-icon"><span class="icon fa-bolt"></span></span>
 									<header>
-										<h3>Vivamus</h3>
+										<h3>DOMquery</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>DOMquery is a DOM Manupulation library inspired by jQuery and written in vanilla JavaScript.</p>
+									<a href="https://github.com/cjlew/DOMquery" class="button scrolly">Repo</a>
 								</section>
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
 									<span class="feature-icon"><span class="icon fa-cloud"></span></span>
 									<header>
-										<h3>Accumsan</h3>
+										<h3>Databall</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Databall is a data visualization application that allows the user to see the statistics that they want to see. Users can customize the graphs that they see by choosing different statistics to measure. Databall is built with JavaScript and d3.js.</p>
+									<a href="https://github.com/cjlew/Databall" class="button scrolly">Repo</a>
 								</section>
 							</div>
 						</div>
