added links in the footer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 		<!-- Header -->
 			<section id="header" class="dark">
+				<div class='dimmer'></div>
 				<header>
 					<h1>Christopher Lew</h1>
 					<p>A fullstack software engineer</p>
@@ -133,32 +134,11 @@
 				<div class="content dark style2">
 					<div class="container">
 						<div class="row">
-							<div class="4u 12u(narrow)">
-								<section>
-									<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-									augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-									lorem ipsum dolor placerat magna tempus feugiat.</p>
-									<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-									euismod lorem ipsum dolor.</p>
-									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
-									</footer>
+								<section class='resume-link'>
+
+									<h3>Want to learn more?</h3>
+									<a href="#" class="button scrolly">My Resume</a>
 								</section>
-							</div>
-							<div class="8u 12u(narrow)">
-								<div class="row">
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -166,16 +146,15 @@
 
 		<!-- Footer -->
 			<section id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-				</ul>
+				<div class='icons-footer'>
+					<ul class="icons-footer-list">
+						<li><a href="https://www.linkedin.com/in/cjlew" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.github.com/cjlew" class="icon fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+				</div>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Christopher Lew All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</section>
