added email and resume

--- a/index.html
+++ b/index.html
@@ -47,10 +47,21 @@
 								<div class='links'>
 					        <a class='img-links' href='https://www.linkedin.com/in/cjlew'>
 					          <img src='./images/linkedin-34-logo.png' alt='linkedin-profile'/>
+										LinkedIn
 					        </a>
 					        <a class='img-links' href='https://www.github.com/cjlew'>
 					          <img src='./images/GitHub-Mark-32px.png' alt='github-repo'>
+										GitHub
 					        </a>
+									<br/>
+									<a class='img-links' href='./images/resume.pdf'>
+										<i alt='resume' class="fa fa-file-pdf-o" aria-hidden="true"></i>
+										Resume
+									</a>
+									<a class='img-links' href='mailto:chrislew@lewcentral.com'>
+										<i alt='email' class="fa fa-envelope-o" aria-hidden="true"></i>
+										Email
+									</a>
 					      </div>
 							</div>
 						</div>
@@ -77,7 +88,7 @@
 									<header>
 										<h3>DOMquery</h3>
 									</header>
-									<p>DOMquery is a DOM Manupulation library inspired by jQuery and written in vanilla JavaScript.</p>
+									<p>DOMquery is a DOM Manipulation library inspired by jQuery and written in vanilla JavaScript.</p>
 									<a href="https://github.com/cjlew/DOMquery" class="button scrolly">Repo</a>
 								</section>
 							</div>
@@ -92,13 +103,6 @@
 								</section>
 							</div>
 						</div>
-						<!-- <div class="row">
-							<div class="12u">
-								<footer>
-									<a href="#second" class="button scrolly">Gravida tempor lacinia</a>
-								</footer>
-							</div>
-						</div> -->
 					</div>
 				</div>
 			</section>
@@ -137,7 +141,7 @@
 								<section class='resume-link'>
 
 									<h3>Want to learn more?</h3>
-									<a href="#" class="button scrolly">My Resume</a>
+									<a href="./images/resume.pdf" class="button scrolly">My Resume</a>
 								</section>
 						</div>
 					</div>
@@ -150,11 +154,17 @@
 					<ul class="icons-footer-list">
 						<li><a href="https://www.linkedin.com/in/cjlew" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.github.com/cjlew" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a class='img-links-footer' href='./images/resume.pdf'>
+							<i alt='resume' class="fa fa-file-pdf-o" aria-hidden="true"></i>
+						</a></li>
+						<li><a class='img-links-footer' href='mailto:chrislew@lewcentral.com'>
+							<i alt='email' class="fa fa-envelope-o" aria-hidden="true"></i>
+						</a></li>
 					</ul>
 				</div>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Christopher Lew All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Christopher Lew. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</section>
