--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				</div>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Christopher Lew. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Christopher Lew</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</section>
