uploaded formatted resume

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										GitHub
 					        </a>
 									<br/>
-									<a class='img-links' href='./images/resume.pdf'>
+									<a class='img-links' href='./images/resume2.pdf'>
 										<i alt='resume' class="fa fa-file-pdf-o" aria-hidden="true"></i>
 										Resume
 									</a>
@@ -141,7 +141,7 @@
 								<section class='resume-link'>
 
 									<h3>Want to learn more?</h3>
-									<a href="./images/resume.pdf" class="button scrolly">My Resume</a>
+									<a href="./images/resume2.pdf" class="button scrolly">My Resume</a>
 								</section>
 						</div>
 					</div>
@@ -154,7 +154,7 @@
 					<ul class="icons-footer-list">
 						<li><a href="https://www.linkedin.com/in/cjlew" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.github.com/cjlew" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<li><a class='img-links-footer' href='./images/resume.pdf'>
+						<li><a class='img-links-footer' href='./images/resume2.pdf'>
 							<i alt='resume' class="fa fa-file-pdf-o" aria-hidden="true"></i>
 						</a></li>
 						<li><a class='img-links-footer' href='mailto:chrislew@lewcentral.com'>
