fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<header>
 					<h1>Christopher Lew</h1>
 					<p>A fullstack software engineer</p>
-					<p>Experienced in Redux, React, Javascript, Ruby on Rails, SQL and HTML5/CSS3<p>
+					<p>Experienced in Redux, React, JavaScript, Ruby on Rails, SQL and HTML5/CSS3<p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">Learn More</a>
