fixed font size for linkedin icon

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<div class='headshot'></div>
 								<div class='links'>
 					        <a class='img-links' href='https://www.linkedin.com/in/cjlew'>
-					          <img src='./images/linkedin-34-logo.png' alt='linkedin-profile'/>
+					          <i id='linkedin-prof' class="icon fa-linkedin-square"></i>
 										LinkedIn
 					        </a>
 					        <a class='img-links' href='https://www.github.com/cjlew'>
