added images for projects

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 						<div class="row">
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
+									<a href='http://www.tempo-app.com/'>
+									<img src='./images/Tempo_Playlist_Show.png'></img>
 									<header>
-										<a href='http://www.tempo-app.com/'>
 											<h3>Tempo</h3>
 										</a>
 									</header>
@@ -84,19 +84,23 @@
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-bolt"></span></span>
+									<img src='./images/DOMquery.png'></img>
 									<header>
 										<h3>DOMquery</h3>
 									</header>
+
 									<p>DOMquery is a DOM Manipulation library inspired by jQuery and written in vanilla JavaScript.</p>
 									<a href="https://github.com/cjlew/DOMquery" class="button scrolly">Repo</a>
 								</section>
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-cloud"></span></span>
+									<a href='http://www.christopherlew.me/Databall/'>
+
+									<img src='./images/databall.png'></img>
 									<header>
 										<h3>Databall</h3>
+									</a>
 									</header>
 									<p>Databall is a data visualization application that allows the user to see the statistics that they want to see. Users can customize the graphs that they see by choosing different statistics to measure. Databall is built with JavaScript and d3.js.</p>
 									<a href="https://github.com/cjlew/Databall" class="button scrolly">Repo</a>
