fixed project image sizing

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<div class="4u 12u(narrow)">
 								<section>
 									<a href='http://www.tempo-app.com/'>
-									<img src='./images/Tempo_Playlist_Show.png'></img>
+									<img class='project-img' src='./images/Tempo_Playlist_Show.png'></img>
 									<header>
 											<h3>Tempo</h3>
 										</a>
@@ -84,7 +84,7 @@
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
-									<img src='./images/DOMquery.png'></img>
+									<img class='project-img' src='./images/DOMquery.png'></img>
 									<header>
 										<h3>DOMquery</h3>
 									</header>
@@ -97,7 +97,7 @@
 								<section>
 									<a href='http://www.christopherlew.me/Databall/'>
 
-									<img src='./images/databall.png'></img>
+									<img class='project-img' src='./images/databall.png'></img>
 									<header>
 										<h3>Databall</h3>
 									</a>
