fixed spelling mistake in about section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<div class='first-flex'>
 							<div class='left-first'>
 								<h2>About</h2>
-								<p>I am a software developer with experiance in Redux, React, JavaScript and
+								<p>I am a software developer with experience in Redux, React, JavaScript and
 									the Ruby on Rails framework. I enjoy being fully immersed in a problem, bringing the problem solving experience I gained as a mechanical engineer to the software field.<br />
 
 								As an engineer, I am passionate about understanding the inner workings of complex systems be it a rocket engine or a web application.</p>
@@ -102,7 +102,7 @@
 										<h3>Databall</h3>
 									</a>
 									</header>
-									<p>Databall is a data visualization application that allows the user to see the statistics that they want to see. Users can customize the graphs that they see by choosing different statistics to measure. Databall is built with JavaScript and d3.js.</p>
+									<p>Databall is a data visualization application that allows the user to see the statistics that they want to see. Users can customize the graphs displayed by choosing different statistics to measure. Databall is built with JavaScript and d3.js.</p>
 									<a href="https://github.com/cjlew/Databall" class="button scrolly">Repo</a>
 								</section>
 							</div>
