--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 		<title>Christopher Lew</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -38,9 +35,10 @@
 							<div class='left-first'>
 								<h2>About</h2>
 								<p>I am a software developer with experience in Redux, React, JavaScript and
-									the Ruby on Rails framework. I enjoy being fully immersed in a problem, bringing the problem solving experience I gained as a mechanical engineer to the software field.<br />
+									the Ruby on Rails framework. I enjoy being fully immersed in a problem, bringing the problem solving experience I gained as a mechanical engineer to the software field.</p>
 
-								As an engineer, I am passionate about understanding the inner workings of complex systems be it a rocket engine or a web application.</p>
+
+								<p>As an engineer, I am passionate about understanding the inner workings of complex systems be it a rocket engine or a web application.</p>
 							</div>
 							<div class=right-first>
 								<div class='headshot'></div>
@@ -60,7 +58,7 @@
 									</a>
 									<a class='img-links' href='mailto:chrislew@lewcentral.com'>
 										<i alt='email' class="fa fa-envelope-o" aria-hidden="true"></i>
-										Email
+										chrislew@lewcentral.com
 									</a>
 					      </div>
 							</div>
